--- a/parrainage/parrainage.css
+++ b/parrainage/parrainage.css
@@ -23,7 +23,7 @@ header {
   justify-content: center;
   top: 0;
   height: 50vh;
-  width: auto;
+  width: 100%;
   background-position: 50% 50%;
   background-repeat: no-repeat;
   background-size: cover;
@@ -324,6 +324,9 @@ li {
   margin-top: 14px;
   margin-bottom: 14px;
 }
+
+
+
 .container {
   display: block;
 }
@@ -488,6 +491,16 @@ h4 {
   margin-top: 5px;
 }
 
+main{
+  display: block;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+ margin: auto;
+ width: 70%;
+}
+
 .container {
   display: block;
   justify-content: center;
@@ -497,20 +510,18 @@ h4 {
   text-align: center;
   justify-content: center;
   align-items: center;
+  align-self: center;
   position: static;
   width: 500px;
-  height: 338px;
+  height: auto;
   border-radius: 6px;
   padding: 15px 30px 20px;
   align-self: center;
-  margin-top: -50px;
-  margin-left: 30%;
-  margin-right: 70%;
-  margin-bottom: 30px;
   border-bottom: none;
   box-shadow: rgba(34, 34, 43, 0.16) 0px 3px 11px;
   background-color: white;
-  margin-right: 700px;
+ margin: auto;
+ margin-top: -100px;
 }
 .cardcontainer {
   width: 400px;
@@ -558,16 +569,22 @@ p {
   text-align: center;
   justify-content: center;
   align-items: center;
-  margin: 100px;
+  /* margin: 100px; */
 }
 .containerblock {
   display: block;
+
   align-items: center;
   text-align: center;
   justify-content: center;
+ padding: 50px;
 }
 .containerbody {
   display: flex;
+width: auto;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
 }
 .containermenue {
   display: flex;
@@ -644,3 +661,33 @@ input {
   margin-right: 10px;
   font-weight: 700;
 }
+
+/* Responsive Large screen */
+@media (min-width: 1400px) {
+   .card  p {
+    font-size: 0.8vw;
+  }
+  .card  h1 {
+    font-size: 1vw;
+  }
+
+  .iconfooters{
+    width: 150px;
+  }
+  .footerfirstp{
+    font-size: 0.6vw;
+    line-height: 40px;
+    margin-top: 50px;
+  }
+  h4{
+    font-size: 1vw;
+  }
+  h1{
+    font-size: 1.6vw;
+  }
+  h3 {
+    font-size: 1.6vw;
+  }
+  p {
+    font-size: 1.2vw;
+  }}
