--- a/detailproduit/detail.css
+++ b/detailproduit/detail.css
@@ -17,8 +17,6 @@ body {
   font-family: "Ubuntu";
 }
 
-
-
 .headertopp {
   position: fixed;
   top: 0;
@@ -42,13 +40,13 @@ body {
   justify-content: space-between;
   padding: 12px 20px;
 }
-a:visited{
+a:visited {
   color: #000;
 }
-a{
+a {
   color: #0b0b0b;
 }
-a:active{
+a:active {
   color: #000;
 }
 .tooltip {
@@ -72,8 +70,7 @@ a:active{
   position: absolute;
   z-index: 1;
   top: 100%;
-  left: 12%;
-  margin-left: -60px;
+  left: 0;
   opacity: 0;
   transition: opacity 0.3s;
   display: flex;
@@ -81,6 +78,7 @@ a:active{
   align-items: flex-start;
   padding: 30px;
   line-height: 28px;
+  border: 1px solid #cecece;
 }
 
 .tooltip .tooltiptext::after {
@@ -130,6 +128,7 @@ a:active{
 
 .tooltip-item h1 {
   font-size: 16px;
+  white-space: nowrap;
 }
 
 .hamburger {
@@ -201,10 +200,12 @@ a:active{
   font-weight: 400;
 
   width: 90px;
-  height: 35px;
+  height: 100%;
   font-family: "Ubuntu";
-  border-radius: 2px;
-  margin-top: 25px;
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .buttonn:hover {
@@ -241,7 +242,8 @@ hr {
   display: flex;
   flex: 1;
   justify-content: flex-end;
-  margin-top: 10px;
+  align-items: center;
+  gap: 16px;
 }
 
 .navbarr {
@@ -249,16 +251,27 @@ hr {
   /* margin-top: 20px; */
   display: flex;
   justify-content: center;
-  width: 100vw;
+  width: 100%;
   box-sizing: border-box;
   align-items: center;
-  /* padding: 20px; */
+  padding: 20px;
+}
+
+.navlinkss {
+  display: flex;
+  justify-content: flex-start;
+  justify-items: flex-start;
+  max-width: 95vw;
+  gap: 16px;
+  flex-wrap: nowrap;
+
+  overflow-x: scroll;
 }
 
 li {
   list-style: none;
   display: inline;
-  padding: 10px;
+  /* padding: 10px; */
 }
 
 .navbarr a {
@@ -267,6 +280,7 @@ li {
   text-decoration: none;
   text-align: center;
   font-size: 18px;
+  white-space: nowrap;
 }
 .navbarr a:hover {
   font-family: "Ubuntu";
@@ -285,7 +299,7 @@ li {
 }
 
 .titleunderlinee {
-  padding-bottom: 18px;
+  /* padding-bottom: 18px; */
   border-radius: 3px;
 }
 
@@ -294,7 +308,7 @@ li {
   color: rgba(0, 0, 0, 0.861);
   font-size: 12px;
   font-weight: bold;
-  margin-right: 12px;
+  white-space: nowrap;
 }
 .navpp:hover {
   color: var(--main-color);
@@ -304,7 +318,7 @@ li {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 20px;
+  /* margin-top: 20px; */
 }
 .buttonpanier {
   display: flex;
@@ -337,79 +351,129 @@ li {
   /* margin-top: 10px; */
   background-color: white;
 }
-.ahreff{
-    color: var(--main-color);
-    text-decoration: underline;
+.ahreff {
+  color: var(--main-color) !important;
+  text-decoration: underline;
+  white-space: nowrap;
 }
-.ahref{
-    color: var(--main-color);
-    text-align: end;
-    margin-left: 190px;
+.ahref {
+  color: var(--main-color) !important;
+  text-align: right;
+  justify-self: flex-end;
+  margin: 0 0 0 auto;
+  /* margin-left: 190px; */
 }
-.leftfive{
-    margin-left: 310px;
+
+main > div > div > p:nth-child(5) {
+  width: 90%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 10px;
 }
-.hr1{
-    margin-top: 20px;
-    width: 500px;
-    border: 0.25px solid rgba(236, 232, 232, 0.74);
+
+.leftfive {
+}
+.hr1 {
+  margin: 10px 0px;
+  width: 90%;
+  border: 0.25px solid rgba(236, 232, 232, 0.74);
 }
 .navlinkss {
   margin-top: 14px;
   margin-bottom: 14px;
 }
 .green {
-    color: rgb(51, 194, 87);
-}
-.product-card {
-    background-color: #fff;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-    text-align: start;
-    padding: 20px;
-    width: 550px;
-    border-radius: 5px;
-    height: 325px;
+  color: rgb(51, 194, 87);
 }
 
-.product-card img {
-    max-width: 100%;
-    height: auto;
-    border-radius: 5px;
-    align-self: baseline;
+.product-cardd-flex {
+  display: flex;
+  /* flex-wrap: wrap; */
+  /* width: 100%; */
+  gap: 20px;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  padding: 8px;
 }
 
-.product-card h2 {
-    margin-top: 10px;
+.product-cardd-flex > div:nth-child(2) > div:nth-child(1) {
+  gap: 8px;
+  align-items: center;
 }
 
-.product-card button {
-    background-color: var(--main-color);
-    color: #fff;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 5px;
-    cursor: pointer;
-    width: 450px;
-    font-size: 18px;
-    justify-content: center;
-    align-self: center;
-    margin-left: 35px;
-    line-height: 30px;
+.greenspan {
+  padding: 4px 12px !important;
+  font-size: 16px !important;
 }
 
-.product-card button:hover {
-    background-color: rgba(241, 47, 170, 0.864);
+.product-cardd-flex > div:nth-child(2) {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
 }
-.product-cardd{
-    width: 550px;
+
+.product-cardd-flex br {
+  display: none;
 }
+
+.product-cardd > div:nth-child(2) {
+  align-items: center;
+  gap: 8px;
+}
+
+.product-cardd {
+  background-color: #fff;
+  text-align: start;
+  /* padding: 20px; */
+  width: 100%;
+  min-width: 300px;
+  border-radius: 5px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  flex-direction: column;
+}
+
+.product-cardd img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 5px;
+  align-self: baseline;
+}
+
+.product-cardd h2 {
+  /* margin-top: 10px; */
+}
+
+.product-cardd button {
+  background-color: var(--main-color);
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  width: 450px;
+  font-size: 18px;
+  justify-content: center;
+  align-self: center;
+  line-height: 30px;
+}
+
+.product-cardd button:hover {
+  background-color: rgba(241, 47, 170, 0.864);
+}
+
+.cardtow {
+  flex: 1;
+  min-width: 200px;
+  /* width: 100%; */
+  padding: 50px 8px;
+}
+
 h1 {
   display: block;
   font-size: 1.5em;
-  margin-block-start: 0.83em;
-  margin-block-end: 0.83em;
-  margin-inline-start: 0px;
-  margin-inline-end: 0px;
+
   font-weight: 400;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
@@ -418,101 +482,104 @@ p {
   display: block;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
-  margin-block-start: 1em;
+  /* margin-block-start: 1em;
   margin-block-end: 1em;
   margin-inline-start: 0px;
-  margin-inline-end: 0px;
+  margin-inline-end: 0px; */
   color: rgba(44, 43, 43, 0.887);
-  margin-bottom: 30px;
+  /* margin-bottom: 30px; */
 }
-g{
-    line-height: 40px;
+/* g {
+  line-height: 40px;
+} */
+.greyp {
+  color: rgba(128, 128, 128, 0.93);
+  font-size: 18px;
+  font-weight: 400;
+  text-decoration: line-through;
 }
-.greyp{
-    color: rgba(128, 128, 128, 0.93);
-    font-size: 18px;
-    font-weight: 400;
-    text-decoration: line-through;
-    margin-right: 20px;
+.pinkp {
+  color: var(--main-color);
+  font-size: 18px;
+  font-weight: 400;
 }
-.pinkp{
-    color:var(--main-color);
-    font-size: 18px;
-    font-weight: 400;
-    margin-right: 20px;
-    
-}
-.quantity  {
-  width:40px;
+.quantity {
+  /* width: 40px; */
+  margin-top: 20px;
   display: flex;
-  border: none; 
- 
+  align-items: center;
+  gap: 8px;
+  border: none;
+}
+main > div > div > a:nth-child(6) > button {
+  margin-top: 20px;
+  padding: 6px 10px;
+  width: 300px;
+  background-color: var(--main-color) !important;
+  margin: auto;
+  border: none;
+  border-radius: 5px;
+  color: white;
 }
 .itemimg {
   width: 25px;
   height: 25px;
   border: none;
-  margin-left: 10px;
-  margin-right: 10px;
 }
 .itemimgg {
   width: 25px;
+  justify-self: end;
   height: 25px;
   border: none;
-  margin-left: 110px;
-  
 }
-.greenspan{
-    background-color: rgb(45, 179, 85);
-    border-radius: 5px;
-    color: white;
-    font-size: 12px;
-    font-weight: 900;
-    padding: 5px;
-    height: 25px;
+.greenspan {
+  background-color: rgb(45, 179, 85);
+  border-radius: 5px;
+  color: white;
+  font-size: 12px;
+  font-weight: 900;
+  padding: 5px;
+  /* height: 25px; */
 }
-h4{
-    align-items: start;
+h4 {
+  align-items: start;
 }
 .blackp {
-    line-height: -1px;
-    margin: 0;
-    padding: 0;
-    margin-top: -20px;
+  line-height: -1px;
+  margin: 0;
+  padding: 0;
 }
-.ahreffh
-{   color: var(--main-color);
-    text-align: center;
-    text-decoration: underline;
-  margin-left: 180px;
- line-height: 30px;
-   
+.ahreffh {
+  color: var(--main-color);
+  text-align: center;
+  text-decoration: underline;
+  line-height: 30px;
 }
-.model{
-    height: 150px;
-    border-radius: 5px;
-}
-main{
-   display: flex;
-   flex-wrap: wrap;
-   justify-content: center;
-   align-items: center;
+.model {
+  width: 15vw;
+  max-width: 200px !important;
+  min-width: 100px;
+  height: auto;
+  /* height: 150px; */
+  border-radius: 5px;
 }
 
+main {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: flex-start;
+  width: 100vw;
+  gap: 30px;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
+main section {
+  flex: 1;
+  display: flex;
+  justify-content: flex-end;
+  min-width: 450px;
+  /* width: 100%; */
+}
 
 footer {
   display: block;
@@ -541,6 +608,8 @@ footer {
   flex-direction: row;
   width: 100vw;
   justify-content: center;
+  padding: 16px;
+  flex-wrap: wrap;
 }
 .footeritem {
   display: flex;
@@ -549,27 +618,155 @@ footer {
   padding: 0px 1rem;
   font-weight: 500;
   color: rgb(70, 70, 80);
-  padding-left: 40px;
 }
 .footerp {
   font-weight: 500;
   color: rgba(100, 100, 105, 0.914);
   font-size: 16px;
+  white-space: nowrap;
 }
 
 /* media queries  */
 
-@media (max-width: 991px) {
+@media (max-width: 1140px) {
+  .navbaritems {
+    padding: 0;
+  }
+  .headercontainertop {
+    padding: 12px;
+    gap: 16px;
+  }
+  .navbarr {
+    margin-top: 0;
+    padding: 0;
+  }
+  .navlinkss {
+    padding: 8px 4px;
+    margin: 0;
+  }
+  .titleunderlinee {
+    font-size: 12px !important;
+  }
+  .titels {
+    font-size: 12px !important;
+  }
+  .veeplogoo {
+    justify-content: flex-start;
+  }
+  .logoo {
+    width: 100px;
+    height: auto;
+  }
+  .tooltip {
+    flex: 0;
+  }
+  .tooltip .tooltiptext {
+    padding: 12px;
+  }
+  .tooltip-item {
+    padding: 0;
+  }
+
+  main {
+    gap: 10px;
+  }
+
+  main section .cardonee {
+    width: 100%;
+  }
+
+  .product-cardd {
+    min-width: 100%;
+  }
+
+  .cardtow {
+    min-width: 300px;
+    padding: 8px;
+  }
 }
 
 @media (max-width: 768px) {
+  g {
+    font-size: 10px;
+  }
+  .greyp {
+    font-size: 10px;
+  }
+  .pinkp {
+    font-size: 10px;
+  }
+  .greenspan {
+    font-size: 12px !important;
+  }
+  .product-cardd-flex h4 {
+    font-size: 14px;
+  }
+  .product-cardd-flex > div:nth-child(2) > div:nth-child(5) {
+    br {
+      display: none;
+    }
+  }
+  .quantity {
+    margin: 0;
+  }
+  .quantity h2 {
+    margin: 0;
+    font-size: 16px;
+  }
+  .itemimg {
+    width: 20px;
+  }
+  .itemimgg {
+    width: 20px;
+  }
+  .product-cardd-flex {
+    flex-wrap: wrap;
+  }
+  .cardtow {
+    min-width: 100%;
+  }
+
+  main section {
+    min-width: 100%;
+  }
 }
 
 @media (max-width: 450px) {
+  .iconsnav {
+    display: none;
+  }
 }
 main {
-    display: flex;
-    justify-content: center;
-    align-self: center;
-    padding: 20px;
+  display: flex;
+  justify-content: center;
+  align-self: center;
+  padding: 20px;
+}
+
+/* large screen */
+
+@media (min-width: 1141px) {
+  .product-card h4 {
+    font-size: 2vw;
+  }
+  .product-card p {
+    font-size: 1.4vw;
+  }
+  .product-card h3 {
+    font-size: 1.4vw;
+  }
+  .hr1 {
+    border-width: 2px;
+    margin: 10px 0px;
+  }
+  .product-card button {
+    margin-top: 8px;
+    font-size: 1.4vw;
+  }
+  p.green {
+    font-size: 1.6vw;
+  }
+  .ahreffh {
+    font-size: 1.2vw;
+  }
 }
