--- a/payement/payement.css
+++ b/payement/payement.css
@@ -51,7 +51,15 @@ header {
   justify-content: space-between;
   padding: 12px 20px;
 }
-
+a:visited {
+  color: #000;
+}
+a {
+  color: #0b0b0b;
+}
+a:active {
+  color: #000;
+}
 .tooltip {
   position: relative;
   display: inline-block;
@@ -73,8 +81,7 @@ header {
   position: absolute;
   z-index: 1;
   top: 100%;
-  left: 12%;
-  margin-left: -60px;
+  left: 0;
   opacity: 0;
   transition: opacity 0.3s;
   display: flex;
@@ -82,6 +89,7 @@ header {
   align-items: flex-start;
   padding: 30px;
   line-height: 28px;
+  border: 1px solid #cecece;
 }
 
 .tooltip .tooltiptext::after {
@@ -131,6 +139,7 @@ header {
 
 .tooltip-item h1 {
   font-size: 16px;
+  white-space: nowrap;
 }
 
 .hamburger {
@@ -202,10 +211,12 @@ header {
   font-weight: 400;
 
   width: 90px;
-  height: 35px;
+  height: 100%;
   font-family: "Ubuntu";
-  border-radius: 2px;
-  margin-top: 25px;
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .buttonn:hover {
@@ -242,7 +253,8 @@ hr {
   display: flex;
   flex: 1;
   justify-content: flex-end;
-  margin-top: 10px;
+  align-items: center;
+  gap: 16px;
 }
 
 .navbarr {
@@ -250,12 +262,106 @@ hr {
   /* margin-top: 20px; */
   display: flex;
   justify-content: center;
-  width: 100vw;
+  width: 100%;
   box-sizing: border-box;
   align-items: center;
-  /* padding: 20px; */
+  padding: 20px;
 }
 
+.navlinkss {
+  display: flex;
+  justify-content: flex-start;
+  justify-items: flex-start;
+  max-width: 95vw;
+  gap: 16px;
+  flex-wrap: nowrap;
+
+  overflow-x: scroll;
+}
+
+li {
+  list-style: none;
+  display: inline;
+  /* padding: 10px; */
+}
+
+.navbarr a {
+  font-family: "Ubuntu";
+  color: black;
+  text-decoration: none;
+  text-align: center;
+  font-size: 18px;
+  white-space: nowrap;
+}
+.navbarr a:hover {
+  font-family: "Ubuntu";
+  color: var(--main-color);
+  text-decoration: none;
+  text-align: center;
+  font-size: 18px;
+}
+
+.titelss:hover {
+  padding-bottom: 18px;
+  border-radius: 3px;
+}
+.titelss {
+  margin-top: 10px;
+}
+
+.titleunderlinee {
+  /* padding-bottom: 18px; */
+  border-radius: 3px;
+}
+
+.navpp {
+  font-family: "Ubuntu";
+  color: rgba(0, 0, 0, 0.861);
+  font-size: 12px;
+  font-weight: bold;
+  white-space: nowrap;
+}
+.navpp:hover {
+  color: var(--main-color);
+}
+.iconsnav {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  /* margin-top: 20px; */
+}
+.buttonpanier {
+  display: flex;
+  justify-content: center;
+}
+
+.veeplogoo {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+}
+.logoo {
+  width: 150px;
+  height: 120px;
+}
+.logo {
+  width: 150px;
+  height: 120px;
+}
+.iconn {
+  width: 25px;
+  height: 25px;
+}
+.navbaritems {
+  padding: 0px 20px 0px 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  /* margin-top: 10px; */
+  background-color: white;
+}
 li {
   list-style: none;
   display: inline;
@@ -494,6 +600,9 @@ footer {
   h3 {
     font-size: 1.6vw;
   }
+  footer h3{
+    font-size: 0.5vw;
+  }
   p {
     font-size: 0.8vw;
   }
@@ -554,4 +663,244 @@ footer {
     margin: 20px;
   }
   
+}
+
+
+/************************responsive*********************************/
+
+/*tablette responsive*/
+
+@media (max-width: 1000px) and (min-width: 770px) {
+  .footerheader {
+    display: none;
+  }
+  .headertop {
+    padding-top: 10px;
+  }
+
+  .navlinks > ul {
+    display: flex;
+    justify-content: flex-start;
+    width: 95vw;
+    gap: 8px;
+    flex-wrap: nowrap;
+    overflow-y: scroll;
+  }
+
+  .titlecontainer {
+    /* display: none; */
+    padding: 30px 20px;
+    background: unset;
+  }
+
+  .containertitle {
+    color: rgb(255, 255, 255);
+  }
+  .title {
+    margin-top: 0px;
+  }
+  .containerparagraphe {
+    color: rgb(255, 255, 255);
+  }
+
+  header {
+    height: 78vh;
+  }
+
+  .search {
+    transform: translateY(150px);
+    width: 90%;
+    margin: 0px;
+  }
+
+  .mySlides {
+    height: 10%;
+    padding: 0px;
+  }
+
+  /* li,
+  ul {
+    text-align: center;
+    margin-top: 5px;
+  } */
+  /* .navp{
+    margin-left: 10px;
+    margin: 0px;
+  } */
+  .dot-container {
+    margin-top: 10px;
+  }
+}
+
+/***************************************************************/
+
+/*mobile responsive*/
+@media (max-width: 770px) {
+  .navbar {
+    width: 100%;
+    margin: 0;
+    padding: 8px;
+    text-align: center;
+  }
+
+  .veeplogo {
+  }
+
+  .logo {
+    transform: translateX(20px);
+    width: 80px;
+    height: auto;
+  }
+
+  .button {
+    /* width: 90px; */
+    font-size: 12px;
+  }
+
+  .navlinks > ul {
+    display: flex;
+    justify-content: flex-start;
+    width: 95vw;
+    gap: 8px;
+    flex-wrap: nowrap;
+    overflow-y: scroll;
+  }
+
+  .navlinks a {
+    white-space: nowrap;
+    font-size: 14px;
+  }
+
+  .headertop {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+  }
+
+  .headercontainertop {
+    padding: 8px;
+  }
+
+  .hamburger {
+    padding-bottom: 0px;
+    transform: translateX(10px);
+  }
+
+  .humberger-text {
+    display: none;
+  }
+
+  .tooltip .tooltiptext {
+    padding: 16px;
+  }
+
+  .tooltiptext hr {
+    margin: 0px;
+  }
+
+  .search {
+    transform: translateY(150px);
+    width: 90%;
+    margin: 0px;
+  }
+
+  .whitebutton {
+    width: unset;
+    height: unset;
+    padding: 8px;
+    margin: 4px 0px;
+  }
+  .dot-container {
+    margin-top: 20px;
+  }
+
+  .titlecontainer {
+    padding: 30px 20px;
+    background: linear-gradient(
+      0deg,
+      rgb(243, 243, 243) 0%,
+      rgb(255, 255, 255) 50%,
+      /* rgba(255, 255, 255, 1) 52%, */ rgba(255, 255, 255, 1) 50%,
+      rgba(255, 254, 254, 0) 100%
+    );
+  }
+
+  .containertitle {
+    color: rgb(70, 70, 80);
+  }
+  .title {
+    margin-top: 0px;
+  }
+  .containerparagraphe {
+    color: rgb(70, 70, 80);
+  }
+
+  header {
+    background-position: center;
+    height: 90vh;
+  }
+
+  .card img {
+    max-width: unset;
+    min-width: unset;
+    width: 100%;
+    object-fit: cover;
+    height: auto;
+  }
+
+  .mySlides {
+    height: 10%;
+    padding: 0px;
+  }
+
+  .footerheader {
+    display: none;
+  }
+  .footerbody {
+    padding: 0 20 0 20;
+    display: flex;
+    font-size: 18px;
+    justify-content: flex-start;
+    gap: 30px;
+  }
+
+  .footerbottom {
+    padding: 26px;
+    margin: 0;
+  }
+
+  .footercollaborators {
+    gap: 10px;
+  }
+
+  .collabimg {
+    width: 40%;
+    height: auto;
+    aspect-ratio: 1/1;
+    max-width: unset;
+    min-width: unset;
+    max-height: unset;
+    min-height: unset;
+    padding-left: 0;
+  }
+
+  .dropdown {
+    display: none;
+  }
+
+  .ends {
+    margin-right: 0;
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+  }
+  .ends img {
+    width: 40%;
+    height: auto;
+    aspect-ratio: 1/1;
+    max-width: unset;
+    min-width: unset;
+    max-height: unset;
+    min-height: unset;
+  }
 }
