--- a/parrainage/parrainage.css
+++ b/parrainage/parrainage.css
@@ -15,6 +15,7 @@
 
 body {
   font-family: "Ubuntu";
+  
 }
 
 /* Header styles */
@@ -845,3 +846,65 @@ input {
     }
     
   }
+  /*mini screen*/
+  @media (max-width:600px) {
+    .card{
+      width: 400px;
+    }
+    .container h1 {
+      font-size: 2.8vw;
+      text-align: center;
+     padding-right: 50px;
+    }
+    hr {
+      display: none;
+    }
+    .container p {
+      font-size: 2.2vw;
+      width: auto;
+      padding-right: 50px;
+    }
+    .input-container{
+      width: auto;
+    }
+    }
+    
+     /*mini screen*/
+  @media (max-width:476px) {
+    .veeplogoo{
+      display: none;
+    }
+    header{
+      width: 100%;
+    }
+    main{
+      width: 100vw;
+      margin: 0;
+      padding: 0;
+    }
+    .card{
+      margin-top: 0;
+      width: 100vw;
+    }
+    
+    }
+    @media (max-width:476px) {
+      header{
+        width: auto;
+      }
+      main{
+        width: 100vw;
+      }
+      .card{
+        margin-top: 0;
+        width: 100vw;
+      }
+      .card p{
+        padding-right: 100px;
+      }
+     
+      
+      }
+      
+  
+
