--- a/qui somme nous/quisommenous.css
+++ b/qui somme nous/quisommenous.css
@@ -143,7 +143,9 @@ main{
     display: block;
     flex-direction: column;
     align-items: center;
-    margin-left: 150px;
+    /* margin-left: 150px; */
+    padding: 50px   80px;
+    margin-left: 50px;
   }
   
   .content-container {
@@ -157,6 +159,7 @@ main{
   .movie-list-wrapper {
     position: relative;
     overflow: hidden;
+    width: 1000px;
   }
   
   .movie-list {
@@ -182,6 +185,7 @@ main{
 .movie-list-title{
     line-height: 50px;
 }
+
 .patagrafitem {
     width: 350px;
     line-height: 30px;
@@ -207,8 +211,10 @@ main{
     justify-content: space-around;
     flex-direction: row;
     text-align: center;
-    margin: 70px 30px 30px 250px;
-    width: 800px;
+    /* margin: 70px 30px 30px 250px; */
+    /* width: 800px; */    
+    margin-top: 50px;
+    margin-left: 30px;
 
 }
 .bodymaincontainer{
@@ -229,7 +235,7 @@ main{
     
 }
 .containerpara {
-    margin-left: 90px;
+    /* margin-left: 90px; */
     font-size: 18px;
     line-height: 20px;
 }
