--- a/home page/style.css
+++ b/home page/style.css
@@ -459,7 +459,7 @@ li {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  width: 80vw;
+  width: 1500px;
   margin-top: -50px;
 
   margin-inline: auto;
@@ -923,3 +923,8 @@ h1:visited {
     gap: 30px;
   }
 }
+/* @media screen and (min-width: 1400px) and (max-width: 4000px) {
+  .page-content {
+    width: 65vw;
+  }
+} */
